unpackaged/objects/Program_Participation__c.object
<CustomObject>
  <description>Used to track the program participation of a contact</description>
  <fields>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Active if currently part of the progem. Should be un-ticked if no longer part of the program.</description>
    <inlineHelpText>Active if currently part of the progem. Should be un-ticked if no longer part of the program.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Please add the contact that is a member of this program</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Program Participations</relationshipLabel>
    <relationshipName>Program_Participations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Participation_Type__c</fullName>
    <label>Participation Type</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Member</fullName>
          <default>true</default>
          <label>Member</label>
        </value>
        <value>
          <fullName>Board Member</fullName>
        </value>
        <value>
          <fullName>Chair/Leader</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Program_Reach_Detail__c</fullName>
    <inlineHelpText>Add the geographical details of the program the Expert is part of</inlineHelpText>
    <label>Program Reach Detail</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Program_Reach__c</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>AD</fullName>
        </value>
        <value>
          <fullName>AE</fullName>
        </value>
        <value>
          <fullName>AF</fullName>
        </value>
        <value>
          <fullName>AG</fullName>
        </value>
        <value>
          <fullName>AI</fullName>
        </value>
        <value>
          <fullName>AL</fullName>
        </value>
        <value>
          <fullName>AM</fullName>
        </value>
        <value>
          <fullName>AN</fullName>
        </value>
        <value>
          <fullName>AO</fullName>
        </value>
        <value>
          <fullName>AQ</fullName>
        </value>
        <value>
          <fullName>AR</fullName>
        </value>
        <value>
          <fullName>AS</fullName>
        </value>
        <value>
          <fullName>AT</fullName>
        </value>
        <value>
          <fullName>AU</fullName>
        </value>
        <value>
          <fullName>AW</fullName>
        </value>
        <value>
          <fullName>AX</fullName>
        </value>
        <value>
          <fullName>AZ</fullName>
        </value>
        <value>
          <fullName>BA</fullName>
        </value>
        <value>
          <fullName>BB</fullName>
        </value>
        <value>
          <fullName>BD</fullName>
        </value>
        <value>
          <fullName>BE</fullName>
        </value>
        <value>
          <fullName>BF</fullName>
        </value>
        <value>
          <fullName>BG</fullName>
        </value>
        <value>
          <fullName>BH</fullName>
        </value>
        <value>
          <fullName>BI</fullName>
        </value>
        <value>
          <fullName>BJ</fullName>
        </value>
        <value>
          <fullName>BL</fullName>
        </value>
        <value>
          <fullName>BM</fullName>
        </value>
        <value>
          <fullName>BN</fullName>
        </value>
        <value>
          <fullName>BO</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Program_Reach__c</fullName>
    <inlineHelpText>State if the expert is part of a local, national, RCO or international program</inlineHelpText>
    <label>Program Reach</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Local</fullName>
        </value>
        <value>
          <fullName>National</fullName>
        </value>
        <value>
          <fullName>RCO</fullName>
        </value>
        <value>
          <fullName>International</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Add the program this Contact is a member of</inlineHelpText>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Program Participations</relationshipLabel>
    <relationshipName>Program_Participations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>SBU__c</fullName>
    <inlineHelpText>Add if the expert program participation is for a specific SBU</inlineHelpText>
    <label>SBU</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>SBU_Full_Names</valueSetName>
    </valueSet>
  </fields>
  <label>Program Participation</label>
  <nameField>
    <label>Program Participation Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>Program Participations</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>